# brokenola

./: .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/ui/accordion/: accordion-trigger.svelte
src/lib/components/ui/calendar/: calendar-next-button.svelte  calendar-prev-button.svelte
src/lib/components/ui/carousel/: carousel-next.svelte  carousel-previous.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/command/: command-input.svelte
src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-radio-item.svelte  context-menu-sub-trigger.svelte
src/lib/components/ui/data-table/: data-table.svelte.ts
src/lib/components/ui/dialog/: dialog-content.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-trigger.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/menubar/: menubar-checkbox-item.svelte  menubar-radio-item.svelte  menubar-sub-trigger.svelte
src/lib/components/ui/pagination/: pagination-link.svelte  pagination-next-button.svelte  pagination-prev-button.svelte
src/lib/components/ui/radio-group/: radio-group-item.svelte
src/lib/components/ui/range-calendar/: range-calendar-next-button.svelte  range-calendar-prev-button.svelte
src/lib/components/ui/resizable/: resizable-handle.svelte
src/lib/components/ui/select/: select-item.svelte  (+1 more)
src/routes/: +layout.svelte
(+2 files in other folders)
